# xay

./: .gitignore  Cargo.toml  README.md  mkdocs.yml  releaserc.toml
.github/workflows/: docs.yml  release.yml  rust-unit.yml
docs/: cli.md  conventions.md  index.md
docs/C/: cli.md  configuration.md  getting-started.md
docs/C++/: cli.md  configuration.md  getting-started.md
mapset_macros/: Cargo.toml
mapset_macros/src/: lib.rs
ninja/: Cargo.toml
ninja/src/: ast.rs  blocks.rs  graph.rs  lib.rs  pretty.rs  writer.rs
subjects/simple/src/: foo.c  main.c
subjects/tsp/: xay.yml  xayc.yml
subjects/tsp/src/: algo.c  algo.h  cli.c  cli.h  consts.c  consts.h  draw.c  draw.h  instance.c  instance.h  main.c  matrice.c  matrice.h  node.c  node.h  tour.c  tour.h  utils.c  utils.h
xay/: Cargo.toml
xay/src/: config.rs  lib.rs
xay/src/clike/: ast.rs  compilation.rs  langc.rs  langcpp.rs  mod.rs  opts.rs  pkgconfig.rs
xay/src/langc/: mod.rs  opts.rs  pkgconfig.rs
xay_graph/: Cargo.toml
xay_graph/src/: config.rs  utils.rs
xay_graph/src/clike/: compilation.rs  langc.rs  langcpp.rs  mod.rs  opts.rs  pkgconfig.rs
