[package]
name = "xay"
version = "0.1.0"
authors = ["Nathan Graule <solarliner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ninja = { path = "../ninja" }
pathdiff = "0.2"
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"]}
shlex = "0.1"
structopt = "0.3"
serde_yaml = "0.8"