[package]
name = "xay_graph"
version = "0.1.0"
authors = ["Nathan Graule <solarliner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
mapset_macros = { path = "../mapset_macros" }
ninja = { path = "../ninja" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
shlex = "0.1"
structopt = "0.3"
pathdiff = "0.2"
petgraph = "0.5"
walkdir = "2.3"